--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -44,6 +44,12 @@
                 </a>
                 </li>
                 <li><hr class="dropdown-divider"></li>
+                <li>
+                <a class="dropdown-item" href="/admin/users">
+                  <i class="bi bi-file-plus me-2"></i>Страница админа
+                </a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
                 <a class="dropdown-item text-danger" href="/logout">
                   <i class="bi bi-box-arrow-right me-2"></i>Выйти
                 </a>
