--- a/views/adminStats.handlebars
+++ b/views/adminStats.handlebars
@@ -34,9 +34,9 @@
                 <a href="/admin/stats/export" class="btn btn-outline-primary">
                     <i class="bi bi-download"></i> Экспорт в CSV
                 </a>
-                <a href="/admin/users" class="btn btn-outline-secondary ms-2">
+{{!--                 <a href="/admin/users" class="btn btn-outline-secondary ms-2">
                     <i class="bi bi-people"></i> Пользователи
-                </a>
+                </a> --}}
             </div>
         </div>
 
